--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 crossterm = "0.28.1"
 bit-vec = "0.8.0"
 rayon = "1.10.0"
+dashmap = "6.1.0"
 
 [dev-dependencies]
 paste = "1.0.15"
